--- a/templates/acapy-secret.yaml
+++ b/templates/acapy-secret.yaml
@@ -8,9 +8,16 @@ metadata:
   namespace: {{ .Release.Namespace }}
 stringData:
   {{- if .Values.admin.apiKey.enabled }}
-  ACAPY_ADMIN_URL_API_KEY: {{ .Values.admin.apiKey.adminURLApiKey | quote }}
+  ACAPY_ADMIN_API_KEY: {{ .Values.admin.apiKey.adminURLApiKey | quote }}
+  {{- else }}
+  ACAPY_ADMIN_INSECURE_MODE: {{ .Values.admin.apiKey.adminInsecureMode | quote }}
   {{- end }}
-  ACAPY_AGENT_SEED: {{ .Values.agentSeed | quote }}
+  {{- if .Values.agentSeed }}
+  ACAPY_WALLET_SEED: {{ .Values.agentSeed | quote }}
+  {{- end }}
   ACAPY_WALLET_KEY: {{ .Values.walletKey | quote }}
+  {{- if .Values.staticArgs.multitenant }}
+  ACAPY_MULTITENANT_JWT_SECRET: {{ .Values.staticArgs.jwtSecret | quote }}
+  {{- end }}
 type: Opaque
 {{- end -}}
