--- a/templates/db-secret.yaml
+++ b/templates/db-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.global.persistence.existingSecret) -}}
+{{- if and (not .Values.global.persistence.existingSecret) (not .Values.vault.enabled) -}}
 apiVersion: v1
 kind: Secret
 metadata:
