Add support for dynamic database credentials

--- a/templates/acapy-secret.yaml
+++ b/templates/acapy-secret.yaml
@@ -1,4 +1,4 @@
-{{- if (include "acapy.createSecret" .) }}
+{{- if and (include "acapy.createSecret" .) (not .Values.vault.enabled) }}
 apiVersion: v1
 kind: Secret
 metadata:
